(-) jQuery-UI library removed (!) Local Font-Awesome 3 icons without SobiPro scope (!) Datepicker attached to body for Bootstrap 3 compatibility

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -1,11 +1,10 @@
 /**
- * @version: $Id$
  * @package: SobiPro Component for Joomla!
 
  * @author
  * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
  * Email: sobi[at]sigsiu.net
- * Url: http://www.Sigsiu.NET
+ * Url: https://www.Sigsiu.NET
 
  * @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
  * @license GNU/GPL Version 3
@@ -15,10 +14,6 @@
 
  * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-
- * $Date$
- * $Revision$
- * $Author$
  */
 
 
@@ -96,7 +91,7 @@ input.required {
 input[type='checkbox'],
 input[type='radio']{
   border-style: none;
-  padding-left: 0px!important;
+  padding-left: 0!important;
 }
 .SobiPro .collapse {
   overflow: hidden \9;
@@ -128,7 +123,7 @@ input[type='radio']{
 }
 
 .SobiPro .firstspan {
-  margin-left: 0px !important;
+  margin-left: 0!important;
 }
 
 #SPAdmToolbar .dropdown-menu .SpDropDownBt li {
@@ -137,8 +132,8 @@ input[type='radio']{
 
 #SPAdmToolbar .dropdown-menu .SpDropDownBt li .nav-header {
   min-width: 160px;
-  padding-left: 0px;
-  padding-right: 0px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 #SPAdminForm #SPAdmToolbar .dropdown-menu .SpDropDownBt li a:hover,
@@ -232,26 +227,21 @@ input[type='radio']{
 .SobiPro .SpCellContainer {
   clear: both;
 }
-
 .SobiPro .SpCellPairLabel {
   margin-right: 10px;
 }
-
 .SobiPro .label {
   padding: 3px 5px 2px;
 }
-
 .submenu-box, div.m {
   background-color: @background;
 }
-
 #SPAdminForm #SPAdmToolbar a:hover,
 #SPAdminForm #SPAdmToolbar a {
   color: @font;
 }
-
 #SPAdmToolbar .nav {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 #SPAdmToolbar h3 {
@@ -263,7 +253,7 @@ input[type='radio']{
 }
 
 #SPAdmToolbar .container-fluid [class*="span"] {
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 #SPAdmToolbar .nav-pills > .active > a,
@@ -391,7 +381,7 @@ fieldset label {
 }
 
 #SPAdminForm .spFieldGroup {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 #SPAdminForm .spFieldGroup label {
@@ -417,7 +407,7 @@ fieldset label {
 }
 
 #SPAdminForm div.spFilterModal .control-label {
-  padding-top: 0px;
+  padding-top: 0;
   width: 100px;
   float: left;
   clear: left;
@@ -546,47 +536,43 @@ fieldset label {
 .SobiPro .controls .uneditable-input {
   color: #666666;
 }
+//default-Breite hochsetzen
+.SobiPro .controls textarea {
+  width: 520px;
+}
 .SobiPro .controls input {
 /*  float: none;  macht mehr kaputt als es hilft */
 }
 .SobiPro .spFileUpload input {
   float: left;
 }
-
 .SobiPro .SpCellCenter input[type="text"] {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
-
 .SobiPro .SpCellCenter input[type="radio"],
 .SobiPro .SpCellCenter input[type="checkbox"] {
-  margin-top: 0px;
+  margin-top: 0;
 }
-
 .SobiPro .SpCellCenter i {
   color: @font;
   font-size: 110%;
 }
-
 .SobiPro .SpCellArrow .icon-chevron-down,
 .SobiPro .SpCellArrow .icon-chevron-up {
   color: #6f6f6f;
 }
-
 .SobiPro .SpCellCenter .icon-pause,
 .SobiPro .SpCellCenter .icon-ok {
   color: green;
 }
-
 .SobiPro .SpCellCenter .icon-remove-sign {
   color: @font-sobipro;
   font-size: 124%;
 }
-
 .SobiPro .SpCellCenter .icon-gift,
 .SobiPro .SpCellCenter .icon-check,
 .SobiPro .SpCellCenter .icon-edit {
 }
-
 .SobiPro .SpCellCenter .icon-money,
 .SobiPro .SpCellCenter .icon-dollar,
 .SobiPro .SpCellCenter .icon-check-empty,
@@ -594,15 +580,12 @@ fieldset label {
 .SobiPro .SpCellCenter .icon-thumbs-down {
   color: grey;
 }
-
 .SobiPro .SpCellCenter .icon-stop {
   color: orange;
 }
-
 .SobiPro .SpCellCenter a.checkedout .icon-lock {
   color: #b22222;
 }
-
 .SobiPro .SpApps .icon-check {
   color: green;
 }
@@ -612,15 +595,12 @@ fieldset label {
 .SobiPro .SpApps .icon-cloud-download {
   color: #0480BE;
 }
-
 .SobiPro .SpCertificate .form-horizontal .control-group {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
-
 .SobiPro .form-horizontal .control-label {
-  padding-right: 0px;
+  padding-right: 0;
 }
-
 #SPAdminForm .SpSoap fieldset .control-label {
   width: 140px;
 }
@@ -630,79 +610,60 @@ fieldset label {
 .SobiPro .SpSoap {
   margin-top: 15px;
 }
-
 .SobiPro .SpCloudInstall {
   width: 13%;
 }
-
 .SobiPro .SpCloudInstall .progress {
-  margin: 5px 0px;
+  margin: 5px 0;
 }
-
 .SobiPro .SpCellCenter .sp-mini-bt {
   padding: 4px 4px !important;
 }
-
 .SobiPro .invalid,
 .SobiPro .invalid a {
   color: red;
   font-weight: normal;
   text-decoration: line-through;
 }
-
 .SobiPro .SpSmallCol {
   width: 5%;
 }
-
-.SobiPro .SpSmallCol {
-  width: 5%;
-}
-
 .SobiPro .SpCellArrow {
   float:left;
   margin-right: 10px;
   margin-left: 10px;
 }
-
 .SobiPro .smallmessage {
   padding-top: 3px;
   padding-bottom: 3px;
   margin-bottom: 5px;
 }
-
 .SobiPro .tooltip-inner {
   color: #ffffff;
   text-align: center;
   background-color: #000066;
 }
-
 .SobiPro .SpExtName .tooltip-inner {
   min-width: 350px;
   color: #202020;
   background-color: #eeeeee;
 }
-
 .SobiPro .SpExtName .tooltip.in {
   opacity: 0.9;
   filter: alpha(opacity=90);
 }
-
 .SobiPro .tooltip.top .tooltip-arrow {
   border-top-color: #000066;
 }
-
 .SobiPro .tooltip.right .tooltip-arrow {
   border-right-color: #000066;
 }
-
 .SobiPro .tooltip.left .tooltip-arrow {
   border-left-color: #000066;
 }
-
 .SobiPro .tooltip.bottom .tooltip-arrow {
   border-bottom-color: #000066;
 }
-
 .SobiPro .spConfigAlert {
   max-width: 600px;
   margin-left: 20px;
@@ -711,32 +672,26 @@ fieldset label {
   max-width: 700px;
   margin-left: 20px;
 }
-
 .SobiPro .spSystemAlert a {
   color: inherit;
   text-decoration: underline;
 }
-
 .SobiPro .spStatusAlert {
   margin-bottom: 5px;
   padding-top: 4px;
   padding-bottom: 4px;
 }
-
 .SobiPro .spStatusIssues {
   float: right;
 }
-
 .SobiPro .spStatusHeader {
   font-size: 17px;
   padding-top: 6px;
 }
-
 .SobiPro .spStatus {
   padding-bottom: 5px;
   padding-top: 8px;
 }
-
 .SobiPro .spPanelSobiPro {
   font-size: 14px;
 }
@@ -813,7 +768,7 @@ fieldset label {
 }
 
 .SobiPro .thumbnails > li {
-  margin-left: 0px;
+  margin-left: 0;
   margin-right: 10px;
 }
 
@@ -859,17 +814,17 @@ fieldset label {
   color: rgba(255, 255, 255, 0.75);
 }
 
-input.sp-input-micro[type="text"] {
+.SobiPro input.sp-input-micro[type="text"] {
   width: 25px;
   text-align: center;
 }
 
-.spOutput {
+.SobiPro .spOutput {
   min-height: 23px;
   padding-top: 6px;
 }
 
-.sp-mini-bt {
+.SobiPro .sp-mini-bt {
   width: 25px;
   height: 20px;
   padding: 0px !important;
@@ -946,48 +901,44 @@ input.sp-input-micro[type="text"] {
   cursor: pointer;
 }
 
-.spUserSelector .response .btn {
+.SobiPro .spUserSelector .response .btn {
   margin: 5px;
   width: 200px;
 }
 
-.spUserSelector .btn-block {
+.SobiPro .spUserSelector .btn-block {
   margin-top: 15px;
 }
 
-.spUserSelector .response {
+.SobiPro .spUserSelector .response {
   min-height: 300px;
   margin-left: 20px;
 }
 
-.spFieldUrlLabel,
-.spFieldEmailLabel {
-}
-
-.spFieldUrlLabel label,
-.spFieldEmailLabel label,
-.spFieldEmail label {
+.SobiPro .spFieldUrlLabel label,
+.SobiPro .spFieldEmailLabel label,
+.SobiPro .spFieldEmail label {
   color: #666666;
   margin-top: 7px;
   float: none;
 }
 
-.spFieldUrl {
+.SobiPro .spFieldUrl {
   display: block;
   margin-top: 5px;
 }
-
-.spFieldUrl select {
+.SobiPro .spFieldUrl select {
   width: 100px;
+  float: left;
 }
 
-.spFileUpload input,
+.SobiPro .spFileUpload input,
 .spFieldRadio,
 .spFieldCheckbox {
   float: left;
 }
 
-.spFileUpload .alert {
+.SobiPro .spFileUpload .alert {
   padding-top: 5px;
   padding-bottom: 5px;
   margin-bottom: 0;
@@ -995,34 +946,28 @@ input.sp-input-micro[type="text"] {
   margin-top: 5px;
 }
 
-.spFileUpload .progress {
+.SobiPro .spFileUpload .progress {
   width: 400px;
 }
 
-.spFieldCheckbox label {
+.SobiPro .spFieldCheckbox label {
   color: #666666;
   float: left;
   margin-top: 5px;
 }
 
-.spFieldCheckbox input {
-  margin-top: 6px !important;
-  margin-left: 5px !important;
-  margin-right: 5px !important;
+.SobiPro .spFieldRadio input,
+.SobiPro .spFieldCheckbox input {
+  margin-top: 9px;
+  margin-left: 5px;
+  margin-right: 5px;
   float: left;
 }
 
-.spFieldRadio label {
+.SobiPro .spFieldRadio label {
   color: #666666;
   float: left;
   margin-top: 5px;
-}
-
-.spFieldRadio input {
-  margin-top: 8px !important;
-  margin-left: 5px !important;
-  margin-right: 5px !important;
-  float: left;
 }
 
 // Tree
@@ -1052,10 +997,10 @@ input.sp-input-micro[type="text"] {
   margin-top: 10px;
 }
 
-.sobiCatsSigsiuTree,
+.SobiPro .sobiCatsSigsiuTree,
 .SobiPro .sobiCatsSigsiuTree {
-  margin-left: 0px;
-  margin-right: 0px;
+  margin-left: 0;
+  margin-right: 0;
   overflow: visible!important;
 }
 
@@ -1150,4 +1095,10 @@ input.sp-input-micro[type="text"] {
 
 .SobiPro .spImageField label {
   display: inline-block;
+}
+
+@media (max-width: 768px) {
+  .SobiPro .controls textarea {
+    width: 100%;
+  }
 }
