--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -366,9 +366,9 @@
     .SobiPro .input-append .btn:last-child,
     .SobiPro .input-append .btn-group:last-child > .dropdown-toggle,
     .SobiPro .input-prepend select,
-    .SobiPro .bootstrap-datetimepicker-widget td,
-    .SobiPro .bootstrap-datetimepicker-widget th,
-    .SobiPro .bootstrap-datetimepicker-widget td span,
+    .bootstrap-datetimepicker-widget td,
+    .bootstrap-datetimepicker-widget th,
+    .bootstrap-datetimepicker-widget td span,
     .SobiPro .bootstrap-tagsinput,
     .SobiPro .topmenu .navbar-inner,
     .SobiPro .navbar-inner,
@@ -1239,10 +1239,10 @@
     float: left;
 }
 .SobiPro .spEntryEdit .spFieldCheckbox input {
-    margin-top: 5px
+    margin-top: 5px;
 }
 .SobiPro .spFieldRadio input {
-    margin-top: 10px
+    margin-top: 10px;
 }
 
 .SobiPro .spSelectRangeFrom span,
@@ -1292,37 +1292,37 @@
 
 // Calendar/Datepicker
 // ----------------------------------------
-.SobiPro .bootstrap-datetimepicker-widget td span.active:hover,
-.SobiPro .bootstrap-datetimepicker-widget td span.active:active,
-.SobiPro .bootstrap-datetimepicker-widget td span.active.active,
-.SobiPro .bootstrap-datetimepicker-widget td span.active.disabled,
-.SobiPro .bootstrap-datetimepicker-widget td span.active[disabled],
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.active:active,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover:active,
-.SobiPro .bootstrap-datetimepicker-widget td.active.active,
-.SobiPro .bootstrap-datetimepicker-widget td.active.active:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.active.disabled,
-.SobiPro .bootstrap-datetimepicker-widget td.active.disabled:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.active[disabled],
-.SobiPro .bootstrap-datetimepicker-widget td.active[disabled]:hover {
+.bootstrap-datetimepicker-widget td span.active:hover,
+.bootstrap-datetimepicker-widget td span.active:active,
+.bootstrap-datetimepicker-widget td span.active.active,
+.bootstrap-datetimepicker-widget td span.active.disabled,
+.bootstrap-datetimepicker-widget td span.active[disabled],
+.bootstrap-datetimepicker-widget td.active:hover,
+.bootstrap-datetimepicker-widget td.active:hover:hover,
+.bootstrap-datetimepicker-widget td.active:active,
+.bootstrap-datetimepicker-widget td.active:hover:active,
+.bootstrap-datetimepicker-widget td.active.active,
+.bootstrap-datetimepicker-widget td.active.active:hover,
+.bootstrap-datetimepicker-widget td.active.disabled,
+.bootstrap-datetimepicker-widget td.active.disabled:hover,
+.bootstrap-datetimepicker-widget td.active[disabled],
+.bootstrap-datetimepicker-widget td.active[disabled]:hover {
     color: @text-color;
     background-color: @base-color;
 }
-.SobiPro .bootstrap-datetimepicker-widget td span.active,
-.SobiPro .bootstrap-datetimepicker-widget td.active,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover {
+.bootstrap-datetimepicker-widget td span.active,
+.bootstrap-datetimepicker-widget td.active,
+.bootstrap-datetimepicker-widget td.active:hover {
     background-image: linear-gradient(to bottom, darken(@base-color, 5%), lighten(@base-color, 5%));
 }
-.SobiPro .bootstrap-datetimepicker-widget a [class^="icon-"] {
+.bootstrap-datetimepicker-widget a [class^="icon-"] {
     color: @base-color;
     & when (@inverse = inverse) {
         color: @text-color;
     }
 }
-.SobiPro .bootstrap-datetimepicker-widget li > a:focus,
-.SobiPro .bootstrap-datetimepicker-widget li > a:hover {
+.bootstrap-datetimepicker-widget li > a:focus,
+.bootstrap-datetimepicker-widget li > a:hover {
     text-decoration: none;
     background-color: #fff;
 }
