--- a/Site/media/css/bootstrap/datepicker.css
+++ b/Site/media/css/bootstrap/datepicker.css
@@ -1,36 +1,31 @@
-.SobiPro .clearfix {
-	*zoom: 1
+.clearfix {
+	*zoom: 1;
 }
-
-.SobiPro .clearfix:before,
-.SobiPro .clearfix:after {
+.clearfix:before,
+.clearfix:after {
 	display: table;
 	content: "";
 	line-height: 0
 }
-
-.SobiPro .clearfix:after {
-	clear: both
+.clearfix:after {
+	clear: both;
 }
-
-.SobiPro .hide-text {
+.hide-text {
 	font: 0/0 a;
 	color: transparent;
 	text-shadow: none;
 	background-color: transparent;
-	border: 0
+	border: 0;
 }
-
-.SobiPro .input-block-level {
+.input-block-level {
 	display: block;
 	width: 100%;
 	min-height: 30px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	box-sizing: border-box
+	box-sizing: border-box;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget {
+.bootstrap-datetimepicker-widget {
 	top: 0;
 	left: 0;
 	width: 250px;
@@ -39,10 +34,9 @@
 	z-index: 3000;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
-	border-radius: 4px
+	border-radius: 4px;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget:before {
+.bootstrap-datetimepicker-widget:before {
 	content: '';
 	display: inline-block;
 	border-left: 7px solid transparent;
@@ -51,10 +45,9 @@
 	border-bottom-color: rgba(0, 0, 0, 0.2);
 	position: absolute;
 	top: -7px;
-	left: 6px
+	left: 6px;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget:after {
+.bootstrap-datetimepicker-widget:after {
 	content: '';
 	display: inline-block;
 	border-left: 6px solid transparent;
@@ -62,76 +55,66 @@
 	border-bottom: 6px solid #fff;
 	position: absolute;
 	top: -6px;
-	left: 7px
+	left: 7px;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget.pull-right:before {
+.bootstrap-datetimepicker-widget.pull-right:before {
 	left: auto;
 	right: 6px
 }
-
-.SobiPro .bootstrap-datetimepicker-widget.pull-right:after {
+.bootstrap-datetimepicker-widget.pull-right:after {
 	left: auto;
-	right: 7px
+	right: 7px;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget > ul {
+.bootstrap-datetimepicker-widget > ul {
 	list-style-type: none;
 	margin: 0;
-	padding: 0
+	padding: 0;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget .timepicker-hour,
-.SobiPro .bootstrap-datetimepicker-widget .timepicker-minute, .bootstrap-datetimepicker-widget .timepicker-second {
+.bootstrap-datetimepicker-widget .timepicker-hour,
+.bootstrap-datetimepicker-widget .timepicker-minute, .bootstrap-datetimepicker-widget .timepicker-second {
 	width: 100%;
 	font-weight: bold;
-	font-size: 1.2em
+	font-size: 1.2em;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget table[data-hour-format="12"] .separator {
+.bootstrap-datetimepicker-widget table[data-hour-format="12"] .separator {
 	width: 4px;
 	padding: 0;
-	margin: 0
+	margin: 0;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget .datepicker > div {
-	display: none
+.bootstrap-datetimepicker-widget .datepicker > div {
+	display: none;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget .picker-switch {
-	text-align: center
+.bootstrap-datetimepicker-widget .picker-switch {
+	text-align: center;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget table {
+.bootstrap-datetimepicker-widget table {
 	width: 100%;
-	margin: 0
+	margin: 0;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td,
-.SobiPro .bootstrap-datetimepicker-widget th {
+.bootstrap-datetimepicker-widget td,
+.bootstrap-datetimepicker-widget th {
 	text-align: center;
 	width: 20px;
 	height: 20px;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
-	border-radius: 4px
+	border-radius: 4px;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td.day:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.hour:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.minute:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.second:hover {
+.bootstrap-datetimepicker-widget td.day:hover,
+.bootstrap-datetimepicker-widget td.hour:hover,
+.bootstrap-datetimepicker-widget td.minute:hover,
+.bootstrap-datetimepicker-widget td.second:hover {
 	background: #eee;
-	cursor: pointer
+	cursor: pointer;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td.old,
-.SobiPro .bootstrap-datetimepicker-widget td.new {
-	color: #999
+.bootstrap-datetimepicker-widget td span.old,
+.bootstrap-datetimepicker-widget td.old,
+.bootstrap-datetimepicker-widget td.new {
+	color: #999;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td.active,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover {
+.bootstrap-datetimepicker-widget td span.active,
+.bootstrap-datetimepicker-widget td.active,
+.bootstrap-datetimepicker-widget td.active:hover {
 	color: #fff;
 	background-color: #006dcc;
 	background-image: -moz-linear-gradient(top, #08c, #04c);
@@ -146,40 +129,46 @@
 	*background-color: #04c;
 	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 	color: #fff;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.active:active,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover:active,
-.SobiPro .bootstrap-datetimepicker-widget td.active.active,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover.active,
-.SobiPro .bootstrap-datetimepicker-widget td.active.disabled,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover.disabled,
-.SobiPro .bootstrap-datetimepicker-widget td.active[disabled],
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover[disabled] {
+.bootstrap-datetimepicker-widget td span.active:hover,
+.bootstrap-datetimepicker-widget td span.active:active,
+.bootstrap-datetimepicker-widget td span.active.active,
+.bootstrap-datetimepicker-widget td span.active.disabled,
+.bootstrap-datetimepicker-widget td span.active[disabled],
+.bootstrap-datetimepicker-widget td.active:hover,
+.bootstrap-datetimepicker-widget td.active:hover:hover,
+.bootstrap-datetimepicker-widget td.active:active,
+.bootstrap-datetimepicker-widget td.active:hover:active,
+.bootstrap-datetimepicker-widget td.active.active,
+.bootstrap-datetimepicker-widget td.active:hover.active,
+.bootstrap-datetimepicker-widget td.active.disabled,
+.bootstrap-datetimepicker-widget td.active:hover.disabled,
+.bootstrap-datetimepicker-widget td.active[disabled],
+.bootstrap-datetimepicker-widget td.active:hover[disabled] {
 	color: #fff;
 	background-color: #04c;
-	*background-color: #003bb3
+	*background-color: #003bb3;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td.active:active,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover:active,
-.SobiPro .bootstrap-datetimepicker-widget td.active.active,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover.active {
+.bootstrap-datetimepicker-widget td span.active:active,
+.bootstrap-datetimepicker-widget td span.active.active,
+.bootstrap-datetimepicker-widget td.active:active,
+.bootstrap-datetimepicker-widget td.active:hover:active,
+.bootstrap-datetimepicker-widget td.active.active,
+.bootstrap-datetimepicker-widget td.active:hover.active {
 	background-color: #039 \9
-
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td.disabled,
-.SobiPro .bootstrap-datetimepicker-widget td.disabled:hover {
+.bootstrap-datetimepicker-widget th.disabled,
+.bootstrap-datetimepicker-widget th.disabled:hover,
+.bootstrap-datetimepicker-widget td span.disabled,
+.bootstrap-datetimepicker-widget td span.disabled:hover,
+.bootstrap-datetimepicker-widget td.disabled,
+.bootstrap-datetimepicker-widget td.disabled:hover {
 	background: 0;
 	color: #999;
-	cursor: not-allowed
+	cursor: not-allowed;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td span {
+.bootstrap-datetimepicker-widget td span {
 	display: block;
 	width: 47px;
 	height: 54px;
@@ -189,110 +178,47 @@
 	cursor: pointer;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
-	border-radius: 4px
+	border-radius: 4px;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td span:hover {
-	background: #eee
+.bootstrap-datetimepicker-widget td span:hover {
+	background: #eee;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td span.active {
-	color: #fff;
-	background-color: #006dcc;
-	background-image: -moz-linear-gradient(top, #08c, #04c);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#04c));
-	background-image: -webkit-linear-gradient(top, #08c, #04c);
-	background-image: -o-linear-gradient(top, #08c, #04c);
-	background-image: linear-gradient(to bottom, #08c, #04c);
-	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
-	border-color: #04c #04c #002a80;
-	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-	*background-color: #04c;
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-	color: #fff;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)
+.bootstrap-datetimepicker-widget th.switch {
+	width: 145px;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td span.active:hover,
-.SobiPro .bootstrap-datetimepicker-widget td span.active:active,
-.SobiPro .bootstrap-datetimepicker-widget td span.active.active,
-.SobiPro .bootstrap-datetimepicker-widget td span.active.disabled,
-.SobiPro .bootstrap-datetimepicker-widget td span.active[disabled] {
-	color: #fff;
-	background-color: #04c;
-	*background-color: #003bb3
+.bootstrap-datetimepicker-widget th.next,
+.bootstrap-datetimepicker-widget th.prev {
+	font-size: 21px;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td span.active:active,
-.SobiPro .bootstrap-datetimepicker-widget td span.active.active {
-	background-color: #039 \9
-
+.input-group.date,
+.input-append.date,
+.ctrl-set-now,
+.ctrl-reset-date,
+.accordion-toggle,
+.bootstrap-datetimepicker-widget thead tr:first-child th {
+	cursor: pointer;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td span.old {
-	color: #999
+.bootstrap-datetimepicker-widget thead tr:first-child th:hover {
+	background: #eee;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget td span.disabled,
-.SobiPro .bootstrap-datetimepicker-widget td span.disabled:hover {
-	background: 0;
-	color: #999;
-	cursor: not-allowed
-}
-
-.SobiPro .bootstrap-datetimepicker-widget th.switch {
-	width: 145px
-}
-
-.SobiPro .bootstrap-datetimepicker-widget th.next,
-.SobiPro .bootstrap-datetimepicker-widget th.prev {
-	font-size: 21px
-}
-
-.SobiPro .bootstrap-datetimepicker-widget th.disabled,
-.SobiPro .bootstrap-datetimepicker-widget th.disabled:hover {
-	background: 0;
-	color: #999;
-	cursor: not-allowed
-}
-
-.SobiPro .bootstrap-datetimepicker-widget thead tr:first-child th {
-	cursor: pointer
-}
-
-.SobiPro .bootstrap-datetimepicker-widget thead tr:first-child th:hover {
-	background: #eee
-}
-
-.SobiPro .input-group.date
-.SobiPro .input-append.date
-.SobiPro .add-on i,
-.SobiPro .input-prepend.date .add-on i {
+.add-on i,
+.input-prepend.date .add-on i {
 	display: block;
 	cursor: pointer;
 	width: 16px;
-	height: 16px
+	height: 16px;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget.left-oriented:before {
+.bootstrap-datetimepicker-widget.left-oriented:before {
 	left: auto;
-	right: 6px
+	right: 6px;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget.left-oriented:after {
+.bootstrap-datetimepicker-widget.left-oriented:after {
 	left: auto;
-	right: 7px
+	right: 7px;
 }
-
-.SobiPro .bootstrap-datetimepicker-widget a [class^="icon-"] {
+.bootstrap-datetimepicker-widget a [class^="icon-"] {
 	font-size: 25px;
 	padding-left: 10px;
 	color: #08c;
-}
-
-.SobiPro .ctrl-set-now,
-.SobiPro .ctrl-reset-date {
-    cursor: pointer;
 }
 
