--- a/Site/media/less/icons.less
+++ b/Site/media/less/icons.less
@@ -4,19 +4,25 @@
   }
 }
 
-.SobiPro a [class^="icon-"], .SobiPro a [class*=" icon-"] {
+a [class^="icon-"],
+a [class*=" icon-"],
+.SobiPro a [class^="icon-"],
+.SobiPro a [class*=" icon-"] {
     background-image: none;
 }
 /** For Joomla! 3.0 default template */
-.SobiPro [class^="icon-"]::before, .SobiPro [class*=" icon-"]::before {
+[class^="icon-"]::before,
+[class*=" icon-"]::before,
+.SobiPro [class^="icon-"]::before,
+.SobiPro [class*=" icon-"]::before {
   font-family: 'FontAwesome';
   font-style: normal;
   speak: none;
   color: inherit;
 }
+.icon-eye:before { content: "\f06e"; }
 .SobiPro .icon-eye:before { content: "\f06e"; }
 
-.SobiPro {
-  #ns > .SobiPro;
-}
+#ns > .SobiPro;
+
 
