--- a/Site/usr/templates/B3-default3/themes/cornfield.less
+++ b/Site/usr/templates/B3-default3/themes/cornfield.less
@@ -24,5 +24,5 @@
 @hover-color: #FFCD47;
 @font-color: #333333;
 @active-color: #6b1e00;
-@alert-color: #FFE6A0;
-@important-color: #FFC119;
+@alert-color: #ffb866;
+@important-color: #864830;
