--- a/Site/usr/templates/B3-default3/css/tmpl/joostrap.css
+++ b/Site/usr/templates/B3-default3/css/tmpl/joostrap.css
@@ -13,45 +13,57 @@
 /* To activate the correction styles, add 'tmpl/joostrap' to the main template configuration file */
 
 .SobiPro {
-    /*font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;*/
+	/* font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; */
+	/* line-height: 1.42857;  /* for Multipurpose */
 }
+
 .SobiPro .pull-right {
-    background-color: inherit;
+	/* background-color: inherit;  /* for Corporate */
 }
+
+.container-wrapper.margintop {
+	/* z-index: auto;   /* for Multipurpose */
+}
+
 .SobiPro .nav {
-    background: inherit;
+	background: inherit;
 }
+
 .SobiPro .navbar {
-    border: 1px solid transparent;
-    box-shadow: none;
-    margin-bottom: 20px;
-    min-height: inherit;
+	border: 1px solid transparent;
+	box-shadow: none;
+	margin-bottom: 20px;
+	min-height: inherit;
 }
+
 .SobiPro .nav > li {
-    border-bottom: inherit;
-    text-align: inherit;
+	border-bottom: inherit;
+	text-align: inherit;
 }
+
 .SobiPro .navbar-nav > li > a {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    font-size: inherit;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	font-size: inherit;
 }
+
 .SobiPro .pagination {
-    width: inherit;
+	width: inherit;
 }
+
 .SobiPro p {
-    font-size: inherit;
-    line-height: inherit;
+	font-size: inherit;
+	line-height: inherit;
 }
+
 .SobiPro a.modal-button.btn,
 .SobiPro div.btn-toolbar a.btn,
 .SobiPro body.contentpane button {
-    font-weight: 400;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 4px;
+	font-weight: 400;
+	background-image: none;
+	border: 1px solid #CCC;
+	border-radius: 4px;
 
-    color: #333;
-    background-color: #FFF;
-    border-color: #CCC;
+	color: #333;
+	background-color: #FFF;
 }
