--- a/Site/usr/templates/B3-default3/themes/malva.less
+++ b/Site/usr/templates/B3-default3/themes/malva.less
@@ -24,5 +24,5 @@
 @hover-color: #FFFFFF;
 @font-color: #333333;
 @active-color: #552768;
-@alert-color: #FFEC5C;
-@important-color: #8D41AA;
+@alert-color: #ffee6b;
+@important-color: #bb8ecc;
