--- a/Site/usr/templates/default3/themes/blackwidow.less
+++ b/Site/usr/templates/default3/themes/blackwidow.less
@@ -23,7 +23,7 @@
 @text-color: #303030;
 @hover-color: #303030;
 @font-color: #FFFFFF;
-@active-color: #E5E5E5; //must no be a dark color
+@active-color: #E5E5E5; //must not be a dark color!!
 @alert-color: #B7B7B7;
 @important-color: #CFA526;
 @error-color: #D63333;
