--- a/Site/usr/templates/default3/themes/cornflower.less
+++ b/Site/usr/templates/default3/themes/cornflower.less
@@ -24,6 +24,6 @@
 @hover-color: #FFFFFF;
 @font-color: #333333;
 @active-color: #004C8F;
-@alert-color: #FFEC5C;
-@important-color: #3498DB;
+@alert-color: #ffee6b;
+@important-color: #8bcaf4;
 
