--- a/Site/usr/templates/default3/themes/meadow.less
+++ b/Site/usr/templates/default3/themes/meadow.less
@@ -24,6 +24,6 @@
 @hover-color: #FFFFFF;
 @font-color: #333333;
 @active-color: #2d5a26;
-@alert-color: #c1dbbd;
-@important-color: #358B27;
+@alert-color: #ffd414;
+@important-color: #86b97e;
 
