--- a/Site/usr/templates/default3/themes/poppyseed.less
+++ b/Site/usr/templates/default3/themes/poppyseed.less
@@ -24,5 +24,5 @@
 @hover-color: #FFFFFF;
 @font-color: #333333;
 @active-color: #222222;
-@alert-color: #c7c7c7;
+@alert-color: #e8dede;
 @important-color: #f0400a;
