--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -14,7 +14,7 @@
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
 //Default values
-@corners: rounded;
+@corners: angular;
 @colour-set: sobipro;
 @small-image: 100px;
 @big-image: 300px;
