template feature: hide/show extended search button

--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -744,12 +744,12 @@
 // Alert windows and error messages
 // ----------------------------------------
 // Alert messages outside SobiPro without given color class
-.alert {
+.alert-sigsiu {
 	background-color: @alert-color;
 	border: 1px solid darken(@alert-color, 10%);
 }
-.alert,
-.alert h4 {
+.alert-sigsiu,
+.alert-sigsiu h4 {
 	color: @active-color;
 }
 
@@ -1192,6 +1192,7 @@
 // Staples
 .SobiPro .tab-content.pills.staples {
 	margin-top: -20px;
+	padding: 0;
 }
 .SobiPro .nav-pills.staples {
 	margin-top: 0;
@@ -1396,6 +1397,9 @@
 	font-size: 85%;
 	color: grey;
 	padding-left: 18px;
+}
+.SobiPro .spCountableReset {
+	margin-top: 5px;
 }
 
 // Image Field
