Joomla icons got overwritten in back-end

--- a/Site/media/less/admicons.less
+++ b/Site/media/less/admicons.less
@@ -1,18 +1,14 @@
 #ns {
   .SobiPro() {
-  @import "font-awesome";
+  @import "../font-awesome";
   }
 }
 
-a [class^="icon-"],
-a [class*=" icon-"],
 .SobiPro a [class^="icon-"],
 .SobiPro a [class*=" icon-"] {
     background-image: none;
 }
 /** For Joomla! 3.0 default template */
-[class^="icon-"]::before,
-[class*=" icon-"]::before,
 .SobiPro [class^="icon-"]::before,
 .SobiPro [class*=" icon-"]::before {
   font-family: 'FontAwesome';
@@ -20,7 +16,8 @@ a [class*=" icon-"],
   speak: none;
   color: inherit;
 }
-.icon-eye:before { content: "\f06e"; }
 .SobiPro .icon-eye:before { content: "\f06e"; }
 
-#ns > .SobiPro;
+.SobiPro {
+	#ns > .SobiPro;
+}
