(#) All fields in backend entry form don't get the set width

--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -1779,6 +1779,9 @@
 		border-color: lighten(@base-color, 10%);
 	}
 }
+.SobiPro .spClassCalendarRepeat {
+	margin-top: 5px;
+}
 
 // Collection App
 // -----------------------------------------------
