--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -1051,6 +1051,17 @@
 	margin-bottom: 15px;
 	margin-top: 15px;
 }
+.SobiPro .spNavigationContainer .spEntryContainer {
+	margin-top: 0;
+}
+.SobiPro .spNavigationContainer {
+	margin-top: -15px;
+	padding-top: 15px;
+}
+.SobiPro .btn-navigation {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
 .SobiPro .spEntryCats {
 	font-size: 80%;
 }
