--- a/Admin/template/info.xml
+++ b/Admin/template/info.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  @package: SobiPro Component for Joomla!
 
  @author
@@ -30,9 +29,9 @@
 		<divider />
 		<buttons type="options" dropdown-class="pull-right">
 			<button type="url" task="panel" />
-			<button type="url" task="config" />
-			<button type="url" task="acl" />
-			<button type="url" task="extensions.installed" />
+			<button type="url" task="config" condition="acl.config" />
+			<button type="url" task="acl" condition="acl.config" />
+			<button type="url" task="extensions.installed" condition="acl.apps" />
 			<button type="url" task="template.info" />
 			<button type="help" target="_blank" />
 		</buttons>
